--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "cz-conventional-changelog",
-  "version": "0.0.0-semantically-released.0",
+  "name": "xng-conventional-changelog",
+  "version": "1.0.0",
   "description": "Commitizen adapter following the conventional-changelog format.",
   "main": "index.js",
   "scripts": {
     "commit": "git-cz",
     "test": "mocha *.test.js",
-    "format": "prettier --write *.js",
-    "semantic-release": "semantic-release"
+    "format": "prettier --write *.js"
   },
-  "homepage": "https://github.com/commitizen/cz-conventional-changelog",
+  "homepage": "https://github.com/CrossEngage/xng-conventional-changelog",
   "repository": {
     "type": "git",
-    "url": "https://github.com/commitizen/cz-conventional-changelog.git"
+    "url": "https://github.com/CrossEngage/xng-conventional-changelog.git"
   },
   "engineStrict": true,
   "engines": {
@@ -36,9 +35,7 @@
     "cosmiconfig": "^5.2.1",
     "mocha": "^6.2.0",
     "mock-require": "^3.0.3",
-    "prettier": "^1.15.3",
-    "semantic-release": "^15.13.3",
-    "semver": "^6.2.0"
+    "prettier": "^1.15.3"
   },
   "optionalDependencies": {
     "@commitlint/load": ">6.1.1"
